--- a/Distribution.ipynb
+++ b/Distribution.ipynb
@@ -13987,21 +13987,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "140bb551",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching inv(::Array{Array{Float64,2},1})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  inv(\u001b[91m::BigFloat\u001b[39m) at mpfr.jl:464\u001b[39m\n\u001b[91m\u001b[0m  inv(\u001b[91m::Missing\u001b[39m) at missing.jl:100\u001b[39m\n\u001b[91m\u001b[0m  inv(\u001b[91m::Complex{Float64}\u001b[39m) at complex.jl:439\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching inv(::Array{Array{Float64,2},1})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  inv(\u001b[91m::BigFloat\u001b[39m) at mpfr.jl:464\u001b[39m\n\u001b[91m\u001b[0m  inv(\u001b[91m::Missing\u001b[39m) at missing.jl:100\u001b[39m\n\u001b[91m\u001b[0m  inv(\u001b[91m::Complex{Float64}\u001b[39m) at complex.jl:439\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[43]:6",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/plain": [
+       "2×2 Array{Float64,2}:\n",
+       " 0.1  0.0\n",
+       " 0.0  0.1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -14009,15 +14009,17 @@
     "using LinearAlgebra\n",
     "ν= 5.0\n",
     "W =  Matrix{Float64}(2.0I, 2, 2)\n",
-    "𝚲 = rand(Wishart(ν, W), 5)\n",
+    "𝚲 = ν*W\n",
+    "𝚺 = inv(𝚲)\n",
+    "𝐱 = rand(InverseWishart(ν, W), 5)\n",
     "\n",
-    "\n"
+    "for x in 𝐱"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b95dad",
+   "id": "2834150a",
    "metadata": {},
    "outputs": [],
    "source": []
