--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "id": "3fed90c3",
+   "execution_count": 11,
+   "id": "2f14df86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "x_vector (generic function with 1 method)"
+       "5×5 Array{Float64,2}:\n",
+       " 0.01  0.0   0.0   0.0   0.0\n",
+       " 0.0   0.01  0.0   0.0   0.0\n",
+       " 0.0   0.0   0.01  0.0   0.0\n",
+       " 0.0   0.0   0.0   0.01  0.0\n",
+       " 0.0   0.0   0.0   0.0   0.01"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,113 +39,43 @@
     "M_truth = 4\n",
     "W_truth = rand(-1:0.1:1,4)\n",
     "\n",
-    "# \n",
-    "#X_line = range(-3, 3, length=200)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
-   "id": "c48c6fea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5×4 Array{Float64,2}:\n",
-       " 1.0  1.0   1.0    1.0\n",
-       " 1.0  2.0   4.0    8.0\n",
-       " 1.0  3.0   9.0   27.0\n",
-       " 1.0  4.0  16.0   64.0\n",
-       " 1.0  5.0  25.0  125.0"
-      ]
-     },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_vector(1:5, 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "id": "bf36da7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1:5"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = 1:5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 224,
-   "id": "b458b81f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5-element Array{Int64,1}:\n",
-       "   1\n",
-       "   8\n",
-       "  27\n",
-       "  64\n",
-       " 125"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.^3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "id": "63c67302",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4-element Array{Int64,1}:\n",
-       " 1\n",
-       " 2\n",
-       " 3\n",
-       " 4"
-      ]
-     },
-     "execution_count": 219,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X[:,2]"
+    "# 真の入力値\n",
+    "X_line = range(-3, 3, length=200)\n",
+    "X_truth = x_vector(X_line, M_truth)\n",
+    "\n",
+    "# 真の出力値\n",
+    "Y_line = X_truth*W_truth\n",
+    "\n",
+    "# 観測データ数\n",
+    "N = 50\n",
+    "xₙ = rand(minimum(X_line):0.01:maximum(X_line),N)\n",
+    "xₙₘ_truth = x_vector(xₙ, M_truth)\n",
+    "\n",
+    "# ノイズ成分のパラメータを設定\n",
+    "using Distributions\n",
+    "λ = 0.4\n",
+    "ϵ = rand(Normal(0,√inv(λ)),　N)　# 平均0ガウス分布\n",
+    "\n",
+    "# 観測データの出力値\n",
+    "yₙ = xₙₘ_truth*W_truth + ϵ\n",
+    "\n",
+    "# 作図\n",
+    "#using Plots\n",
+    "#plot(X_line, Y_line, label=\"Y_truth\")\n",
+    "#scatter!(xₙ, yₙ, label=\"Y_obs\")\n",
+    "\n",
+    "# 超パラメータ\n",
+    "using LinearAlgebra\n",
+    "M = 5\n",
+    "mₘ = zeros(M)\n",
+    "Σₘₘ = Matrix{Float64}(I, M, M)*10\n",
+    "Λₘₘ = inv(Σₘₘ^2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862a1d44",
+   "id": "d5ef40de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d6774eba",
+   "id": "f2fbc86c",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "492142cb",
+   "id": "361306c8",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "ba0d9a36",
+   "id": "cc1cd1bb",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "418fc67e",
+   "id": "8263ab4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -250,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9553f768",
+   "id": "5f9deddf",
    "metadata": {},
    "outputs": [],
    "source": []
