--- a/Poisson-dist.ipynb
+++ b/Poisson-dist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "caea662e",
+   "id": "7ce34535",
    "metadata": {},
    "source": [
     "## 「ベイズ推論による機械学習入門」P.55 ポアソン分布 (Poisson distribution)\n",
@@ -12,16 +12,22 @@
     "\n",
     "$$Poi(x|\\lambda) = \\frac{\\lambda^x}{x!}e^{-\\lambda}$$\n",
     "\n",
+    "\n",
     "$$\\lambda \\in R^{+}$$\n",
     "\n",
     "- 対数表示\n",
     "\n",
-    "$$ lnPoi(x|\\lambda) = xln\\lambda - lnx! - \\lambda$$"
+    "$$ lnPoi(x|\\lambda) = xln\\lambda - lnx! - \\lambda$$\n",
+    "\n",
+    "- 期待値\n",
+    "\n",
+    "$$\\langle x \\rangle = \\lambda $$\n",
+    "$$\\langle x^2 \\rangle = \\lambda(\\lambda + 1) $$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4798916c",
+   "id": "435f8dbf",
    "metadata": {},
    "source": [
     "### ポアソン分布"
@@ -30,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "094b1140",
+   "id": "c30306c6",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04541342",
+   "id": "09b80069",
    "metadata": {},
    "source": [
     "### パラメータの設定を変えた確率質量関数のグラフ"
@@ -59,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "264d6f67",
+   "id": "4546e741",
    "metadata": {},
    "outputs": [
     {
