--- a/Poisson-dist.ipynb
+++ b/Poisson-dist.ipynb
@@ -11,8 +11,7 @@
     "- 定義\n",
     "\n",
     "$$\n",
-    "    Poi(x|\\lambda) = \\frac{\\lambda^x}{x!}e^{-\\lambda} \\\\\n",
-    "    \\lambda \\in R^{+} \\\\\n",
+    "    Poi(x|\\lambda) = \\frac{\\lambda^x}{x!}e^{-\\lambda} \\quad \\lambda \\in R^{+} \\\\\n",
     "$$\n",
     "\n",
     "- 対数表示\n",
@@ -20,8 +19,7 @@
     "- 期待値\n",
     "\n",
     "$$\n",
-    "  \\langle x \\rangle = \\lambda \\\\\n",
-    "  \\langle x^2 \\rangle = \\lambda(\\lambda + 1) \\\\\n",
+    "  \\langle x \\rangle = \\lambda \\quad \\langle x^2 \\rangle = \\lambda(\\lambda + 1) \\\\\n",
     "$$"
    ]
   },
