--- a/src/gibbs_poi-mixmodel.ipynb
+++ b/src/gibbs_poi-mixmodel.ipynb
@@ -1460,7 +1460,7 @@
     "b̂ = ones(K)\n",
     "α̂ = ones(K)\n",
     "\n",
-    "@time for i in 1:max_iter\n",
+    "for i in 1:max_iter\n",
     "    # 潜在変数の事後分布のパラメータを計算\n",
     "    η_ = exp.(data' .* log.(λ_sample[i, :]) .- λ_sample[i, :] .+ π_sample[i, :]) # \\eta + <TAB>\n",
     "    η = η_ ./ sum(η_, dims=1) # 正規化\n",
