--- a/src/gibbs_gauss-mix-model.ipynb
+++ b/src/gibbs_gauss-mix-model.ipynb
@@ -2437,7 +2437,7 @@
   {
    "cell_type": "code",
    "execution_count": 462,
-   "id": "55e45de6",
+   "id": "6d42e364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,7 +2454,7 @@
     "\n",
     "μ_sample = zeros(K, D, max_iter + 1)\n",
     "Λ_sample = zeros(D, D, K, max_iter + 1)\n",
-    "π_sample = zeros(max_iter + 1, K);\n",
+    "π_sample = zeros(max_iter + 1, K)\n",
     "\n",
     "# 事前分布のパラメータの初期値を設定\n",
     "β_sample[1, :] = ones(K)\n",
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa49f88",
+   "id": "113f4c52",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\Lambda$、$\\boldsymbol \\alpha$のサンプルに初期値を設定"
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 464,
-   "id": "5f9c0c15",
+   "id": "1303c2ca",
    "metadata": {},
    "outputs": [
     {
@@ -2576,7 +2576,7 @@
   {
    "cell_type": "code",
    "execution_count": 465,
-   "id": "c3f2413b",
+   "id": "e31b04bb",
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "505df449",
+   "id": "754c276f",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\mu$のサンプルに初期値を設定"
@@ -2634,7 +2634,7 @@
   {
    "cell_type": "code",
    "execution_count": 466,
-   "id": "10b9f905",
+   "id": "89cc8950",
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbffacb6",
+   "id": "36f89497",
    "metadata": {},
    "source": [
     "### 潜在変数の事後分布のパラメータ$\\boldsymbol \\eta$の計算"
@@ -2699,7 +2699,7 @@
   {
    "cell_type": "code",
    "execution_count": 467,
-   "id": "1afc6c93",
+   "id": "944f160d",
    "metadata": {},
    "outputs": [
     {
@@ -2755,7 +2755,7 @@
   {
    "cell_type": "code",
    "execution_count": 468,
-   "id": "ea1bf364",
+   "id": "b808dd64",
    "metadata": {},
    "outputs": [
     {
@@ -2801,16 +2801,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ca3dc19",
+   "id": "5f740527",
    "metadata": {},
    "source": [
-    "### 潜在変数$\\boldsymbol S$をサンプリング"
+    "### 潜在変数$\\boldsymbol S$の事後分布をサンプリング"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 469,
-   "id": "e76e7fee",
+   "id": "ac3b6810",
    "metadata": {},
    "outputs": [
     {
@@ -2862,7 +2862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e261f10b",
+   "id": "62269cfd",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\mu$の事後分布のパラメータを計算"
@@ -2871,7 +2871,7 @@
   {
    "cell_type": "code",
    "execution_count": 470,
-   "id": "17c1b840",
+   "id": "01f791c2",
    "metadata": {},
    "outputs": [
     {
@@ -2920,7 +2920,7 @@
   {
    "cell_type": "code",
    "execution_count": 471,
-   "id": "9607eceb",
+   "id": "3a0c1432",
    "metadata": {},
    "outputs": [
     {
@@ -2969,7 +2969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5307d888",
+   "id": "11ba3341",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\Lambda$の事後分布のパラメータを計算"
@@ -2978,7 +2978,7 @@
   {
    "cell_type": "code",
    "execution_count": 472,
-   "id": "3124c652",
+   "id": "a712ce7b",
    "metadata": {},
    "outputs": [
     {
@@ -3027,7 +3027,7 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "id": "aa5234ad",
+   "id": "08001438",
    "metadata": {},
    "outputs": [
     {
@@ -3065,16 +3065,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00d2f8d7",
+   "id": "004d698d",
    "metadata": {},
    "source": [
-    "### パラメータ$\\boldsymbol \\Lambda$をサンプリング"
+    "### パラメータ$\\boldsymbol \\Lambda$の事後分布をサンプリング"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 478,
-   "id": "91be9718",
+   "id": "31423d1a",
    "metadata": {},
    "outputs": [
     {
@@ -3172,133 +3172,171 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02504d56",
+   "id": "ecf60fda",
    "metadata": {},
    "source": [
-    "### パラメータ$\\boldsymbol \\mu$をサンプリング"
+    "### パラメータ$\\boldsymbol \\mu$の事後分布をサンプリング"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
-   "id": "1125921b",
+   "execution_count": 494,
+   "id": "043ca33a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×3 Matrix{Float64}:\n",
-       "  1.0   1.0   1.0\n",
-       " 70.0  76.0  57.0"
-      ]
-     },
-     "execution_count": 480,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "β_sample[1:2, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 483,
-   "id": "d5fbb5ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2×2×3×101 Array{Float64, 4}:\n",
-       "[:, :, 1, 1] =\n",
-       "  0.341182  -0.647638\n",
-       " -0.647638   1.49715\n",
+       "3×2×3 Array{Float64, 3}:\n",
+       "[:, :, 1] =\n",
+       " -11.215     -3.478\n",
+       "  -0.508768   1.1507\n",
+       "   2.28336   -0.297502\n",
        "\n",
-       "[:, :, 2, 1] =\n",
-       "  3.30401    -0.0226256\n",
-       " -0.0226256   0.467352\n",
+       "[:, :, 2] =\n",
+       "  8.87067   14.216\n",
+       " 11.7622     2.59409\n",
+       "  0.541319  18.657\n",
        "\n",
-       "[:, :, 3, 1] =\n",
-       "  0.343307  -0.749196\n",
-       " -0.749196   1.67925\n",
-       "\n",
-       "[:, :, 1, 2] =\n",
-       " 0.0023374    0.000834544\n",
-       " 0.000834544  0.00129377\n",
-       "\n",
-       "[:, :, 2, 2] =\n",
-       " 0.00316451   0.000898396\n",
-       " 0.000898396  0.00144632\n",
-       "\n",
-       "[:, :, 3, 2] =\n",
-       " 0.00296622   0.000910344\n",
-       " 0.000910344  0.000995897\n",
-       "\n",
-       "[:, :, 1, 3] =\n",
+       "[:, :, 3] =\n",
        " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 2, 3] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 3, 3] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "...\n",
-       "\n",
-       "[:, :, 1, 99] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 2, 99] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 3, 99] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 1, 100] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 2, 100] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 3, 100] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 1, 101] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 2, 101] =\n",
-       " 0.0  0.0\n",
-       " 0.0  0.0\n",
-       "\n",
-       "[:, :, 3, 101] =\n",
        " 0.0  0.0\n",
        " 0.0  0.0"
       ]
      },
-     "execution_count": 483,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Λ_sample[:, :, :, :]"
+    "for k in 1:K\n",
+    "    mult_gauss = MvNormal(m_sample[:, k, 2], PDMat(Symmetric(inv(β_sample[2, k] * Λ_sample[:, :, k, 2]))))\n",
+    "    μ_sample[k, :, 2] = rand(mult_gauss)\n",
+    "end\n",
+    "\n",
+    "μ_sample[:, :, 1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80f9445c",
+   "metadata": {},
+   "source": [
+    "### 混合比率の事後分布のパラメータ$\\boldsymbol \\alpha$を計算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 503,
+   "id": "d8a0aa14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101×3 Matrix{Float64}:\n",
+       "  1.0   1.0   1.0\n",
+       " 70.0  76.0  57.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  ⋮          \n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0\n",
+       "  0.0   0.0   0.0"
+      ]
+     },
+     "execution_count": 503,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "α_sample[2, :] = sum(s_sample, dims=1) + α_sample[1, :]'\n",
+    "\n",
+    "α_sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eab0356",
+   "metadata": {},
+   "source": [
+    "### 混合比率$\\boldsymbol \\pi$の事後分布をサンプリング"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 506,
+   "id": "82bcf47b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101×3 Matrix{Float64}:\n",
+       " 0.469209  0.196403  0.334387\n",
+       " 0.319778  0.437508  0.242714\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " ⋮                   \n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0"
+      ]
+     },
+     "execution_count": 506,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir = Dirichlet(α_sample[2, :])\n",
+    "π_sample[2, :] = rand(dir)\n",
+    "\n",
+    "π_sample"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fb81b14",
+   "id": "6ed3341c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3306,23 +3344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1a73d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5cce9b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a76ef9e3",
+   "id": "0fd89013",
    "metadata": {},
    "outputs": [],
    "source": []
