--- a/src/gibbs_gauss-mix-model.ipynb
+++ b/src/gibbs_gauss-mix-model.ipynb
@@ -2435,8 +2435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
-   "id": "a3fac526",
+   "execution_count": 585,
+   "id": "12ea11be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2467,7 +2467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a3ccd9a",
+   "id": "553fd64a",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\Lambda$、$\\boldsymbol \\alpha$のサンプルに初期値を設定"
@@ -2475,8 +2475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
-   "id": "0a9b16b8",
+   "execution_count": 586,
+   "id": "f82a19ea",
    "metadata": {},
    "outputs": [
     {
@@ -2484,16 +2484,16 @@
       "text/plain": [
        "2×2×3×2 Array{Float64, 4}:\n",
        "[:, :, 1, 1] =\n",
-       "  2.45539  -1.71376\n",
-       " -1.71376   5.5654\n",
+       "  6.52908  -0.74939\n",
+       " -0.74939   1.7242\n",
        "\n",
        "[:, :, 2, 1] =\n",
-       " 1.47497  1.21274\n",
-       " 1.21274  1.1744\n",
+       "  2.4791    -0.511544\n",
+       " -0.511544   0.258897\n",
        "\n",
        "[:, :, 3, 1] =\n",
-       " 5.8214   1.71249\n",
-       " 1.71249  1.35535\n",
+       " 0.633194  0.414417\n",
+       " 0.414417  0.390883\n",
        "\n",
        "[:, :, 1, 2] =\n",
        " 0.0  0.0\n",
@@ -2508,7 +2508,7 @@
        " 0.0  0.0"
       ]
      },
-     "execution_count": 533,
+     "execution_count": 586,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2524,20 +2524,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
-   "id": "822360a5",
+   "execution_count": 587,
+   "id": "ad5ef353",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 0.47535  0.0362043  0.488446\n",
-       " 0.0      0.0        0.0\n",
-       " 0.0      0.0        0.0"
+       " 0.395131  0.180053  0.424815\n",
+       " 0.0       0.0       0.0\n",
+       " 0.0       0.0       0.0"
       ]
      },
-     "execution_count": 534,
+     "execution_count": 587,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e2e42d",
+   "id": "dc0baa7f",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\mu$のサンプルに初期値を設定"
@@ -2559,8 +2559,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
-   "id": "b0f73700",
+   "execution_count": 588,
+   "id": "d2b3d0b0",
    "metadata": {},
    "outputs": [
     {
@@ -2568,9 +2568,9 @@
       "text/plain": [
        "3×2×2 Array{Float64, 3}:\n",
        "[:, :, 1] =\n",
-       " -0.0182533  -0.101162\n",
-       "  1.11428     0.0236552\n",
-       "  0.134359   -2.38848\n",
+       " -0.268806   0.554992\n",
+       " -0.172825  -1.75892\n",
+       " -1.25398    3.8275\n",
        "\n",
        "[:, :, 2] =\n",
        " 0.0  0.0\n",
@@ -2578,14 +2578,16 @@
        " 0.0  0.0"
       ]
      },
-     "execution_count": 535,
+     "execution_count": 588,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for k in 1:K\n",
-    "    mult_gauss = MvNormal(m_sample[:, k, 1], PDMat(Symmetric(inv(β_sample[1, k] * Λ_sample[:, :, k, 1]))))\n",
+    "    βΛ_ = β_sample[1, k] * Λ_sample[:, :, k, 1]\n",
+    "    βΛ = (βΛ_ + βΛ_')/2\n",
+    "    mult_gauss = MvNormal(m_sample[:, k, 1], PDMat(Symmetric(inv(βΛ))))\n",
     "    μ_sample[k, :, 1] = rand(mult_gauss)\n",
     "end\n",
     "\n",
@@ -2594,7 +2596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d2b0f3",
+   "id": "73986a7d",
    "metadata": {},
    "source": [
     "### 潜在変数の事後分布のパラメータ$\\boldsymbol \\eta$の計算"
@@ -2602,22 +2604,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
-   "id": "c79e0bf0",
+   "execution_count": 589,
+   "id": "2066a77a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×3 Matrix{Float64}:\n",
-       "  109.399   567.866    173.267\n",
-       "  993.852   579.824    790.448\n",
-       "  825.693  2346.04     198.154\n",
-       " 2982.72   6206.62   12829.7\n",
-       "  314.989  1184.82     163.365"
+       "  1168.51   137.258   329.486\n",
+       "  5169.24  1046.83   1557.1\n",
+       "  6625.27   683.732  2380.56\n",
+       " 15362.9   4952.4     623.994\n",
+       "  2881.83   284.721   973.877"
       ]
      },
-     "execution_count": 549,
+     "execution_count": 589,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2637,22 +2639,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
-   "id": "e0c571b6",
+   "execution_count": 590,
+   "id": "685b05a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×3 Matrix{Float64}:\n",
-       " 0.584575  0.162645   0.25278\n",
-       " 0.287464  0.235144   0.477393\n",
-       " 0.46925   0.206048   0.324702\n",
-       " 0.84927   0.0415632  0.109167\n",
-       " 0.514433  0.190067   0.2955"
+       " 0.714575  0.0839368  0.201489\n",
+       " 0.665011  0.134672   0.200318\n",
+       " 0.683754  0.0705638  0.245683\n",
+       " 0.733688  0.236512   0.0298001\n",
+       " 0.696022  0.0687662  0.235212"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 590,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2665,7 +2667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f002396",
+   "id": "64e9386c",
    "metadata": {},
    "source": [
     "### 潜在変数$\\boldsymbol S$の事後分布をサンプリング"
@@ -2673,22 +2675,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
-   "id": "fd079bf5",
+   "execution_count": 591,
+   "id": "0ec92573",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×3 Matrix{Float64}:\n",
-       " 1.0  0.0  0.0\n",
+       " 0.0  0.0  1.0\n",
        " 0.0  0.0  1.0\n",
        " 0.0  0.0  1.0\n",
        " 1.0  0.0  0.0\n",
        " 1.0  0.0  0.0"
       ]
      },
-     "execution_count": 538,
+     "execution_count": 591,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2705,7 +2707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ebfecf9",
+   "id": "cfbffca4",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\mu$の事後分布のパラメータを計算"
@@ -2713,8 +2715,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
-   "id": "b711774b",
+   "execution_count": 592,
+   "id": "5d8f1436",
    "metadata": {},
    "outputs": [
     {
@@ -2722,11 +2724,11 @@
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
        "   1.0   1.0   1.0\n",
-       " 118.0  22.0  63.0\n",
+       " 138.0  35.0  30.0\n",
        "   0.0   0.0   0.0"
       ]
      },
-     "execution_count": 539,
+     "execution_count": 592,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2739,8 +2741,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
-   "id": "029b4667",
+   "execution_count": 593,
+   "id": "bc85ee88",
    "metadata": {},
    "outputs": [
     {
@@ -2752,15 +2754,15 @@
        " 0.0  0.0  0.0\n",
        "\n",
        "[:, :, 2] =\n",
-       "  2.00861  10.0597  6.82883\n",
-       " 12.7134   10.6786  8.7422\n",
+       "  2.7424   8.36147   7.24807\n",
+       " 12.3192  -1.92074  21.768\n",
        "\n",
        "[:, :, 3] =\n",
        " 0.0  0.0  0.0\n",
        " 0.0  0.0  0.0"
       ]
      },
-     "execution_count": 540,
+     "execution_count": 593,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2775,7 +2777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "babca3a3",
+   "id": "bc6b3e66",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\Lambda$の事後分布のパラメータを計算"
@@ -2783,8 +2785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
-   "id": "cfa44df3",
+   "execution_count": 594,
+   "id": "8fcf9dfe",
    "metadata": {},
    "outputs": [
     {
@@ -2792,11 +2794,11 @@
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
        "   2.0   2.0   2.0\n",
-       " 119.0  23.0  64.0\n",
+       " 139.0  36.0  31.0\n",
        "   0.0   0.0   0.0"
       ]
      },
-     "execution_count": 541,
+     "execution_count": 594,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,8 +2811,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
-   "id": "0d7820ff",
+   "execution_count": 595,
+   "id": "48a15c43",
    "metadata": {},
    "outputs": [
     {
@@ -2818,19 +2820,19 @@
       "text/plain": [
        "2×2×3 Array{Float64, 3}:\n",
        "[:, :, 1] =\n",
-       " 2.43683e-5  8.14708e-6\n",
-       " 8.14708e-6  1.16207e-5\n",
+       " 1.62799e-5  5.8969e-6\n",
+       " 5.8969e-6   1.06177e-5\n",
        "\n",
        "[:, :, 2] =\n",
-       " 2.42273e-5  6.93749e-6\n",
-       " 6.93749e-6  9.7407e-6\n",
+       " 1.53005e-5  4.13428e-6\n",
+       " 4.13428e-6  8.32614e-6\n",
        "\n",
        "[:, :, 3] =\n",
-       " 2.529e-5    7.65277e-6\n",
-       " 7.65277e-6  1.02111e-5"
+       " 1.62144e-5  5.56535e-6\n",
+       " 5.56535e-6  9.93406e-6"
       ]
      },
-     "execution_count": 542,
+     "execution_count": 595,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2848,7 +2850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c57b51",
+   "id": "fb643da0",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\Lambda$の事後分布をサンプリング"
@@ -2856,8 +2858,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
-   "id": "63be0bf3",
+   "execution_count": 596,
+   "id": "dc4c72bb",
    "metadata": {},
    "outputs": [
     {
@@ -2865,38 +2867,40 @@
       "text/plain": [
        "2×2×3×2 Array{Float64, 4}:\n",
        "[:, :, 1, 1] =\n",
-       "  2.45539  -1.71376\n",
-       " -1.71376   5.5654\n",
+       "  6.52908  -0.74939\n",
+       " -0.74939   1.7242\n",
        "\n",
        "[:, :, 2, 1] =\n",
-       " 1.47497  1.21274\n",
-       " 1.21274  1.1744\n",
+       "  2.4791    -0.511544\n",
+       " -0.511544   0.258897\n",
        "\n",
        "[:, :, 3, 1] =\n",
-       " 5.8214   1.71249\n",
-       " 1.71249  1.35535\n",
+       " 0.633194  0.414417\n",
+       " 0.414417  0.390883\n",
        "\n",
        "[:, :, 1, 2] =\n",
-       " 0.00238277   0.000698875\n",
-       " 0.000698875  0.00106195\n",
+       " 0.00211388   0.000956341\n",
+       " 0.000956341  0.00146321\n",
        "\n",
        "[:, :, 2, 2] =\n",
-       " 0.000473768  0.000133111\n",
-       " 0.000133111  0.000161673\n",
+       " 0.000489887  0.000158578\n",
+       " 0.000158578  0.000238877\n",
        "\n",
        "[:, :, 3, 2] =\n",
-       " 0.00135581   0.000480464\n",
-       " 0.000480464  0.000726269"
+       " 0.000481612  9.61856e-5\n",
+       " 9.61856e-5   0.000183277"
       ]
      },
-     "execution_count": 543,
+     "execution_count": 596,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for k in 1:K\n",
-    "    wis = Wishart(ν_sample[2, k], W_sample[:, :, k, 2])\n",
+    "    W_ = W_sample[:, :, k, 2]\n",
+    "    W = (W_ + W_')/2\n",
+    "    wis = Wishart(ν_sample[2, k], W)\n",
     "    Λ_sample[:, :, k, 2] = rand(wis)\n",
     "end\n",
     "\n",
@@ -2905,7 +2909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8966dc",
+   "id": "ba07bd53",
    "metadata": {},
    "source": [
     "### パラメータ$\\boldsymbol \\mu$の事後分布をサンプリング"
@@ -2913,8 +2917,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
-   "id": "d1d24cf9",
+   "execution_count": 597,
+   "id": "267d6d0e",
    "metadata": {},
    "outputs": [
     {
@@ -2922,14 +2926,14 @@
       "text/plain": [
        "3×2×3 Array{Float64, 3}:\n",
        "[:, :, 1] =\n",
-       " -0.0182533  -0.101162\n",
-       "  1.11428     0.0236552\n",
-       "  0.134359   -2.38848\n",
+       " -0.268806   0.554992\n",
+       " -0.172825  -1.75892\n",
+       " -1.25398    3.8275\n",
        "\n",
        "[:, :, 2] =\n",
-       "  4.18865   9.83364\n",
-       " -6.15928  37.9322\n",
-       "  5.67933  13.273\n",
+       "  3.52618  15.3711\n",
+       " 13.9748   -3.81161\n",
+       "  5.59833   7.11474\n",
        "\n",
        "[:, :, 3] =\n",
        " 0.0  0.0\n",
@@ -2937,14 +2941,16 @@
        " 0.0  0.0"
       ]
      },
-     "execution_count": 544,
+     "execution_count": 597,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for k in 1:K\n",
-    "    mult_gauss = MvNormal(m_sample[:, k, 2], PDMat(Symmetric(inv(β_sample[2, k] * Λ_sample[:, :, k, 2]))))\n",
+    "    βΛ_ = β_sample[2, k] * Λ_sample[:, :, k, 2]\n",
+    "    βΛ = (βΛ_ + βΛ_')/2\n",
+    "    mult_gauss = MvNormal(m_sample[:, k, 2], PDMat(Symmetric(inv(βΛ))))\n",
     "    μ_sample[k, :, 2] = rand(mult_gauss)\n",
     "end\n",
     "\n",
@@ -2953,7 +2959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cac861df",
+   "id": "6de4f098",
    "metadata": {},
    "source": [
     "### 混合比率の事後分布のパラメータ$\\boldsymbol \\alpha$を計算"
@@ -2961,8 +2967,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
-   "id": "4c2e43fc",
+   "execution_count": 598,
+   "id": "3f9a9dfd",
    "metadata": {},
    "outputs": [
     {
@@ -2970,11 +2976,11 @@
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
        "   1.0   1.0   1.0\n",
-       " 118.0  22.0  63.0\n",
+       " 138.0  35.0  30.0\n",
        "   0.0   0.0   0.0"
       ]
      },
-     "execution_count": 545,
+     "execution_count": 598,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2987,7 +2993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed5a94ed",
+   "id": "1e52c9f7",
    "metadata": {},
    "source": [
     "### 混合比率$\\boldsymbol \\pi$の事後分布をサンプリング"
@@ -2995,20 +3001,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
-   "id": "346ba91d",
+   "execution_count": 599,
+   "id": "e1efe30c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 0.47535   0.0362043  0.488446\n",
-       " 0.593034  0.104411   0.302555\n",
-       " 0.0       0.0        0.0"
+       " 0.395131  0.180053  0.424815\n",
+       " 0.699312  0.128983  0.171705\n",
+       " 0.0       0.0       0.0"
       ]
      },
-     "execution_count": 546,
+     "execution_count": 599,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3022,7 +3028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce87a034",
+   "id": "874a49ac",
    "metadata": {},
    "source": [
     "### まとめ"
@@ -3030,15 +3036,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
-   "id": "3f5721a8",
+   "execution_count": 583,
+   "id": "351aa1dc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration: 1\n"
+      "iteration: 1\n",
+      "iteration: 11\n"
      ]
     },
     {
@@ -3062,7 +3069,7 @@
       " [6] Wishart(df::Float64, S::Matrix{Float64})",
       "   @ Distributions ~/.julia/packages/Distributions/Nhadm/src/matrix/wishart.jl:65",
       " [7] top-level scope",
-      "   @ In[580]:73",
+      "   @ In[583]:73",
       " [8] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [9] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -3158,15 +3165,15 @@
     "    α_sample[i+1, :] = sum(s_sample, dims=1) + α_sample[i, :]'\n",
     "    \n",
     "    # 混合比率πの事後分布をサンプル\n",
-    "    dir = Dirichlet(α_sample[i+1, :])\n",
-    "    π_sample[i+1, :] = rand(dir)\n",
+    "    #dir = Dirichlet(α_sample[i+1, :])\n",
+    "    #π_sample[i+1, :] = rand(dir)\n",
     "    \n",
     "    if i % 10 == 1\n",
     "        println(\"iteration: $i\")\n",
     "    end\n",
     "    \n",
     "    # s_sample を構成する全ての要素をゼロに置き換える\n",
-    "    fill!(s_sample, zero(eltype(s_sample)))\n",
+    "    #fill!(s_sample, zero(eltype(s_sample)))\n",
     "    \n",
     "end\n"
    ]
@@ -3174,7 +3181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "262ccb26",
+   "id": "350a8933",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3182,7 +3189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d48922",
+   "id": "cbe78c2a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3190,7 +3197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "928af2df",
+   "id": "8d0bc12b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3198,7 +3205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fa6135b",
+   "id": "8a67548e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3206,7 +3213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4398d0af",
+   "id": "6658ac43",
    "metadata": {},
    "outputs": [],
    "source": []
