--- a/src/2D_Gaussian_VI.ipynb
+++ b/src/2D_Gaussian_VI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71687c7b",
+   "id": "3e05300f",
    "metadata": {},
    "source": [
     "# 2次元ガウス分布に対する変分推論\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8a1d6769",
+   "id": "29ddc1aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,30 +22,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "415b2d44",
+   "execution_count": 2,
+   "id": "c6a66976",
    "metadata": {},
    "outputs": [],
    "source": [
-    "function learn_VI()\n",
-    "    μ\n",
+    "struct Gauss\n",
+    "    μ::Vector{Float64}\n",
+    "    Λ::Matrix{Float64}\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a8487f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "init_params (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function init_params(D)\n",
+    "    μ = randn(D)\n",
+    "    Λ = zeros(D, D)\n",
+    "    return μ, Λ\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "836bf8cf",
+   "id": "7a0891b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "function calc_KL()"
+    "function update_μ()\n",
+    "    result = Vector()\n",
+    "    \n",
+    "    for i in 1:max_iter\n",
+    "        \n",
+    "    end\n",
+    "    \n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5dec07e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function calc_KL()\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76d6cd49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function learn_VI(X, , max_iter)\n",
+    "    μ_history = randn(D)\n",
+    "    λ_history = zeros(D, D)\n",
+    "    \n",
+    "    KL = Vector{Float64}()\n",
+    "    result = Vector()\n",
+    "    \n",
+    "    for i in 1:max_iter\n",
+    "        μ_history[i] = μ[1] - inv(λ[1, 1] *)\n",
+    "        \n",
+    "    end\n",
+    "    \n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4b3b7684",
+   "id": "4a097ed4",
    "metadata": {},
    "outputs": [
     {
@@ -74,13 +140,13 @@
     "    0.0\n",
     "]\n",
     "\n",
-    "λ = inv(A * inv([1.0 0.0; 0.0 10]) * A')"
+    "Λ = inv(A * inv([1.0 0.0; 0.0 10]) * A')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "888a5c01",
+   "id": "d4d57261",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4133e262",
+   "id": "dfc76905",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -96,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a30f942",
+   "id": "a91c73f8",
    "metadata": {},
    "outputs": [],
    "source": []
